--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "express": "^4.21.2",
     "joi": "^17.13.3"
+  },
+  "devDependencies": {
+    "eslint": "^9.21.0"
   }
 }
